--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql2": "^3.10.2",
-    "pug": "^2.0.3"
+    "nodejs-complete-guide": "file:",
+    "pug": "^2.0.3",
+    "sequelize": "^6.37.3"
   }
 }
